--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "hitclub-proxy",
+  "name": "proxy-hitclub",
   "version": "1.0.0",
-  "description": "Proxy iframe i.hit.club",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6"
+    "request": "^2.88.2"
   }
 }
